--- a/src/AdminPageComponents/SelectedVideos/SortedVideo.css
+++ b/src/AdminPageComponents/SelectedVideos/SortedVideo.css
@@ -68,3 +68,18 @@
   background-color: #c82525;
 }
 
+  /*  RESPONSIVE DESIGN */
+
+  @media screen and (max-width: 1300px) {
+
+    .titles {
+      width: 90%;
+      margin-top: 5%;
+      margin-left: -3%;
+    }
+
+    .video-titles {
+      width: 90%;
+    }
+
+  }
