--- a/src/AdminPageComponents/VideoUploadContainer.css
+++ b/src/AdminPageComponents/VideoUploadContainer.css
@@ -7,19 +7,8 @@
   margin-top: 7vh;
 }
 
-.info{
-  width: 2rem;
-  height: 2rem;
-  display: flex;
-  flex-direction: column;
-  margin-left: 96vw;
-  margin-top: 0.50rem;
-  cursor: pointer;
-}
-
 .drag-drop-area {
   border: 2px dashed #ccc;
-  /* padding: 50px 0 70px 50px; */
   text-align: center;
   background-color: #f9f9f9;
   border-radius: 5px;
@@ -30,7 +19,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin-left: 1rem;
+  margin-left: 32%;
   margin-top: 3vh;
   transition: .4s;
 }
@@ -66,7 +55,7 @@ background-color:#e1e1e1c4;
   flex-direction: column;
   width: 30vw;
   padding: 10px 10px 20px;
-  margin-left: 1rem;
+  margin-left: 32%;
   border-radius: 5px;
   margin-top: 0.50rem;
   font-weight: 500;
@@ -107,11 +96,16 @@ background-color:#e1e1e1c4;
   background-color: #c0c0c0;
 }
 
+.span{
+  font-size: 14px;
+}
+
 .confirm-text {
+  font-size: 14px;
   padding-bottom: 10px;
 }
 
-.video-title-container {
+.title-bar {
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -128,6 +122,7 @@ background-color:#e1e1e1c4;
   border-radius: 5px;
   border: 1.5px solid rgb(45, 45, 45);
   padding: 5px 15px 7px;
+  font-size: 14px;
   width: 30vw;
   height: 6vh;
   margin-top:0.5rem;
@@ -166,6 +161,32 @@ background-color:#e1e1e1c4;
   background-color: rgb(7, 75, 132);
 }
 
+.route-video-management {
+  display: flex;
+  align-items: center;
+  justify-content: left;
+  margin-left: 2rem;
+  margin-top: -3rem;
+  padding-bottom: 10vh;
+}
+
+.route-btn {
+  width: 15rem;
+  height: 6rem;
+  background-color: rgb(196, 40, 40);
+  color: whitesmoke;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 5px;
+  padding: 5px 10px 7px;
+  cursor: pointer;
+  transition: .3s;
+}
+
+.route-btn:hover {
+  background-color: rgb(132, 7, 7);
+}
+
 /* RESPONSIVE DESIGN */
 
 @media screen and (max-width: 1070px) {
@@ -175,7 +196,7 @@ background-color:#e1e1e1c4;
     width: 80%;
   }
 
-  .video-title-container {
+  .title-bar {
     width: 100%;
   }
 
@@ -189,6 +210,10 @@ background-color:#e1e1e1c4;
     margin-left: -1%;
   }
 
+  .remove-confirm, .remove-cancel, .first-remove-btn {
+    width: 80%;
+  }
+
 }
 
 @media screen and (max-width: 500px) {
@@ -197,7 +222,7 @@ background-color:#e1e1e1c4;
     width: 90%;
   }
 
-  .video-title-container {
+  .title-bar {
     width: 100%;
   }
 
@@ -209,5 +234,9 @@ background-color:#e1e1e1c4;
 
   .add-to-pool-container {
     margin-left: 5%;
+  }
+
+  .remove-confirm, .remove-cancel, .first-remove-btn {
+    width: 90%;
   }
 }
